<resources>
    <string name="app_name">AndroidMusic</string>

    <!-- ACTIVITY NAMES-->
    <string name="activity_podcast">Podcasts</string>
    <string name="activity_songs">Songs</string>
    <string name="activity_albums">Albums</string>
    <string name="activity_playlist">Playlist</string>
    <string name="activity_favorites">Favorites</string>

    <!-- PODCAST NAMES-->
    <string name="podcast_1">1. NPR</string>
    <string name="podcast_2">2. Simple Programer</string>
    <string name="podcast_3">3. Android Buffet</string>
    <string name="podcast_4">4. This Week in Google</string>
    <string name="podcast_5">5. Codepen Radio</string>
    <string name="podcast_6">6. Small Talk</string>
    <string name="podcast_7">7. Fragmented</string>
    <string name="podcast_8">8. Android Developers Backstage</string>

    <!-- TRACK NAMES-->
    <string name="track_1">1. Learning to Walk</string>
    <string name="track_2">2. My heart beats for you</string>
    <string name="track_3">3. This old pickup</string>
    <string name="track_4">4. Staring at my screen</string>
    <string name="track_5">5. Talking to myself</string>
    <string name="track_6">6. Laptop Confessions</string>
    <string name="track_7">7. Late night blues</string>
    <string name="track_8">8. memes and gifs</string>

    <!-- FAVORTIE TITLE NAMES-->
    <string name="favorite_1">1. The Coding Song</string>
    <string name="favorite_5">2. Fun with Udacity</string>
    <string name="favorite_6">3. Learning to fail: A success story</string>
    <string name="favorite_7">4. Up late</string>
    <string name="favorite_8">5. Is it morning already</string>

    <!-- DESCRIPTION  SONG ACTIVITY-->
    <string name="description_activity_song">activity_songs.xml contains a list of song titles and corresponding dummy buttons. Songs are fictitious. While a toast message gets displayed, audio resource file is not linked, therefore songs are not played or heard. MediaPlayer Class is required to play media file</string>

    <!-- DESCRIPTION PODCAST ACTIVITY-->
    <string name="description_activity_podcast">activity_podcast.xml contains a list of podcast titles and corresponding dummy buttons. While a toast message gets displayed, audio resource file is not linked therefore podcasts are not played or heard. MediaPlayer Class is required to play media file</string>

    <!-- DESCRIPTION FAVORITE ACTIVITY-->
    <string name="description_activity_favorites">activity_favorites.xml contains a list of favorite song titles and corresponding dummy buttons. Songs are fictitious. While a toast message gets displayed, audio resource file is not linked songs are not played or heard. MediaPlayer Class is required to play media file</string>

    <!-- DESCRIPTION MAIN ACTIVITY-->
    <string name="description_activity_main">activity_main.xml contains 3 TextViews. Each TextView has an ID. In the MainActivity.java file the id is used to identify each TextView. Once that is done a setOnClickListener method is called and a new OnclickListener method is passed as a parameter. Within the OnClickListener Method an Intent is created. The Intent will change the activity. depending which TextView is clicked the startActivity() class changes Activity. Within the new activity the setContentView(R.layout.) will display a different layout</string>
</resources>
