<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_favorites"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jamesmay.androidmusic.FavoritesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/music_3" />

        <LinearLayout style="@style/TrackLine">

            <TextView
                style="@style/TrackName"
                android:text="@string/favorite_1" />

            <Button
                android:id="@+id/favorite_btn_1"
                style="@style/TrackButton"
                android:text="play" />

        </LinearLayout>

        <LinearLayout style="@style/TrackLine">

            <TextView
                style="@style/TrackName"
                android:text="@string/favorite_5" />

            <Button
                android:id="@+id/favorite_btn_2"
                style="@style/TrackButton"
                android:text="play" />

        </LinearLayout>

        <LinearLayout style="@style/TrackLine">

            <TextView
                style="@style/TrackName"
                android:text="@string/favorite_6" />

            <Button
                android:id="@+id/favorite_btn_3"
                style="@style/TrackButton"
                android:text="play" />
        </LinearLayout>

        <LinearLayout style="@style/TrackLine">

            <TextView
                style="@style/TrackName"
                android:text="@string/favorite_7" />

            <Button
                android:id="@+id/favorite_btn_4"
                style="@style/TrackButton"
                android:text="play" />
        </LinearLayout>

        <LinearLayout style="@style/TrackLine">

            <TextView
                style="@style/TrackName"
                android:text="@string/favorite_8" />

            <Button
                android:id="@+id/favorite_btn_5"
                style="@style/TrackButton"
                android:text="play" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
